# arethusa-ecs

./: .gitignore  CMakeLists.txt  README.md
src/: Bits.cpp  Bits.h  CMakeLists.txt  Component.h  ComponentManager.cpp  ComponentManager.h  Constants.h  EditProcessor.cpp  EditProcessor.h  Entity.cpp  Entity.h  EntityEdit.h  EntityManager.cpp  EntityManager.h  EntityStateProcessor.h  EntityStates.h  EntitySystem.cpp  EntitySystem.h  EntitySystemCrtp.h  Manager.cpp  Manager.h  Mapper.h  NoCopy.h  Store.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  Util.cpp  Util.h  World.cpp  World.h  arethusa.h  bleh.cpp
test/: BitsTest.cpp  CMakeCache.txt  CMakeLists.txt  ComponentManagerTest.cpp  EntitySystemTest.cpp  EntityTest.cpp  Makefile  ManagerTest.cpp  MapperTest.cpp  WorldTest.cpp  cmake_install.cmake  tests.cpp
